--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,9 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories
- vendor/
-# Template directories
-
- templates/
+# Ignore dependency directory
+ /vendor/*
+# Ignore template directory
+ /templates/*
+# Ignore database directory
+/database/*
